# qcar2_sim

./: .gitignore  README.md  how to execute  req.txt
install/: local_setup.sh  setup.sh
install/husarion_gz_worlds/share/husarion_gz_worlds/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/husarion_gz_worlds/share/husarion_gz_worlds/cmake/: husarion_gz_worldsConfig-version.cmake  husarion_gz_worldsConfig.cmake
install/husarion_gz_worlds/share/husarion_gz_worlds/config/: teleop.config
install/qcar2/share/qcar2/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/qcar2_line_tracker/lib/qcar2_line_tracker/: line_controller_node  line_perception_node
install/qcar2_line_tracker/share/qcar2_line_tracker/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
src/: Bev_diag.py
src/husarion_gz_worlds/worlds/: qcar_straight.sdf  qcar_track.sdf
src/qcar2_line_tracker/: package.xml  setup.cfg  setup.py
src/qcar2_line_tracker/config/: controller_qcar2.yaml  perception_qcar2.yaml
src/qcar2_line_tracker/launch/: line_tracker.launch.py
src/qcar2_line_tracker/qcar2_line_tracker/: line_controller_node.py  line_perception_node.py
src/qcar2_line_tracker/rviz/: qcar_sensors.rviz
src/urdf_representations/qcar2/launch/: simulation.launch.py
src/urdf_representations/qcar2/urdf/: QCar2.urdf
(+77 files in other folders)
